Fixed contrast accessibility errors in avatar, badge, and divider

--- a/src/chi/components/avatars/avatars.scss
+++ b/src/chi/components/avatars/avatars.scss
@@ -19,7 +19,7 @@ $avatar-default-size: 'md';
 
   background-color: set-color(grey, 20);
   border-radius: 50%;
-  color: set-color(grey, 50);
+  color: $text-color;
   display: inline-block;
   font-size: map-get($avatar-sizes, $avatar-default-size) / 2;
   height: map-get($avatar-sizes, $avatar-default-size);
@@ -95,7 +95,7 @@ $avatar-default-size: 'md';
       } @else {
         background-color: white;
         border: max(0.0625rem, map-get($avatar-sizes, $avatar-default-size) / 48) solid map-get(map-get($colorscheme, $color), 60);
-        color: map-get(map-get($colorscheme, $color), 60);
+        color: map-get(map-get($colorscheme, $color), 70);
 
         &.-transparent {
           background-color: transparent;
