--- a/src/chi/components/badge/badge.scss
+++ b/src/chi/components/badge/badge.scss
@@ -233,13 +233,13 @@ $badge: c-badge;
     &.-outline {
       background-color: transparent;
       border-color: set-color(grey, 50);
-      color: set-color(grey, 50);
+      color: set-color(grey, 60);
     }
 
     &.-flat {
       background-color: transparent;
       border-color: transparent;
-      color: set-color(grey, 50);
+      color: set-color(grey, 60);
     }
   }
 
