--- a/src/chi/components/divider/divider.scss
+++ b/src/chi/components/divider/divider.scss
@@ -49,7 +49,7 @@
   &.-hasLabel {
     align-items: center;
     border-top: 0;
-    color: set-color(grey, 50);
+    color: set-color(grey, 60);
     display: grid;
     grid-gap: 1rem;
     grid-template-columns: 1fr auto 1fr;
